# Tremeschin6

./: .gitignore  README.md  block.py  color.py  context.py  controller.py  core.py  d2xcpp.py  d2xmath.py  dandere2x.py  dandere2x_cli.py  failsafe.py  frame.py  get_externals.py  gui-qt.py  gui.py  image.py  linux_requirements.txt  plugins.py  processing.py  requirements.txt  settings.yaml  setup.py  stats.py  upscaler.py  utils.py  video.py  vp.py  waifu2x.py
dandere2x_cpp_tremx/: CMakeLists.txt  build_opencv_mingw.sh  constants.h  instructions.txt  linux_compile.sh  linux_compile_full.sh  linux_crosscompile_for_windows.sh  main.cpp  mingw-w64-x86_64.cmake  requirements.txt
data/: dandere2x-qt-gui.ui
gui/: #gtk_dandere2x_rewrite_gui.glade#  gtk_dandere2x_gui.glade  gtk_dandere2x_gui.glade~  gtk_dandere2x_rewrite_gui.glade  gtk_dandere2x_rewrite_gui.glade~  gui_stuff.yaml
misc/: greeter_message.py
profiles/: anime.yaml  generic.yaml  irl.yaml  user.yaml
samples/: legal  yn_moving.mkv
src/: cli.py  color.py  context.py  controller.py  core.py  d2xcpp.py  d2xmath.py  dandere2x.py  directories.py  directories.yaml  failsafe.py  frame.py  get_externals.py  gui-qt.py  gui_qt.py  make_release.py  processing.py  requirements.txt  stats.py  upscaler.py  utils.py  video.py  vp.py
src/dandere2x_cpp/: CMakeLists.txt  main.cpp  requirements.txt
src/data/: dandere2x-qt-gui.ui
src/misc/: greeter_message.py
src/profiles/: anime.yaml  dandere2x cpp testing.yaml  generic.yaml  irl.yaml  user.yaml
src/release/: build_opencv_mingw.sh  compile_d2xcpp_linux.sh  compile_d2xcpp_windows.sh  instructions.txt  make_release.py
src/samples/: yn_moving_480.mkv
src/vpys/: transpose.vpy
